# youtube-RAG

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
public/assets/: demo_video.mov
scripts/: inspect_index.py  run-youtube-transcript-api.py  run.py  test_chat.py  test_indexer.py  test_ytdlp_captions.py
src/: __init__.py  app.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/rag/: __init__.py  base.py  chunker.py  embeddings.py  generator.py  retriever.py  vectorstore.py
src/services/: __init__.py  base.py  chat.py  indexing.py
src/youtube/: __init__.py  base.py  channel.py  client.py  transcripts.py  videos.py
