[project]
name = "youtube-rag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "youtube-transcript-api>=0.6.0",
    "google-api-python-client>=2.0.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "langchain-text-splitters>=0.0.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.0.0",
]
